components/section/education-section/styles.module.css
/* EDUCATION */
.education_container.opened {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, auto) 1fr;
    /* display: flex;
    flex-direction: column; */
    width: 100%;
    height: 100%;
    gap: .5rem;
    overflow-y: hidden;
}
.education_container > h3 {
    font-size: 1.5rem;
    font-weight: 900;
    display: flex;
    align-items: center;
    gap: 1rem;
}
.education_container.opened .education {
    padding: .5rem;
    border: var(--border);
    border-radius: 10px;
}
.education.in_progress {

}
.education.completed {
    background: var(--brand-900);
    color: var(--white);
}
.education.completed > p {
    color: var(--grey-200);
}
.education_title {
    display: flex;
    align-items: center;
    gap: .2rem;
}
@keyframes pending {
    0% {
        transform: rotate(0deg);
      }
      50% {
        transform: rotate(180deg);
      }
      100% {
        transform: rotate(360deg);
      }
}
.education_title > span {
    display: grid;
    place-content: center;
    animation: pending 2s ease infinite;
}
.education_lapse {
    display: none;
    color: var(--grey-700);
}
.education_container.opened .education_lapse {
    display: block;
}
.concepts_list_wrapper {
    overflow-y: scroll;
    height: 100%;
}
.concepts_list {
    display: flex;
    flex-direction: column;
    gap: .5rem;
}
.concept_container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
    padding: .5rem;
    border: var(--border);
    border-radius: 10px;
}
.concept_title {
    display: flex;
    align-items: center;
    gap: .25rem;
}
.concept_desc {
    padding-left: 1.75rem;
}

.education_container {
    display: flex;
    flex-direction: row;
    gap: 2rem;
}
.title_wrapper {
    overflow-x: hidden;
    display: flex;
}
.education_title.opened {
    line-height: 1;
    display: grid;
    grid-template-columns: 1fr auto;
}
.education_title_wrapper {
    overflow: hidden;
    width: 100%;
}
.education_title_slider {
    white-space: nowrap;
    animation: move 8s linear infinite;
    display: flex;
    gap: 1rem;
    width: 100%;
}
.education_title.opened {
    text-wrap: nowrap;
}
.divider {
    min-height: 100%;
    width: 1px;
    background: var(--grey);
}
@keyframes move {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(-100%);
    }
}
/* DESKTOP */
@media (min-width: 1024px) {
    .education_title_slider {
        animation: none;
    }
    .education {
        border: none;
    }
    .education_lapse {
        display: block;
    }
}

